[package]
name = "rips"
version = "0.0.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/faern/librips"
description = "Rust TCP/IP Stack - A full userspace TCP/IP stack written in Rust"
readme = "README.md"

[dependencies]
ipnetwork = "0.9.0"
pnet = "0.12.0"
log = "0.3"

[features]
default = []
unit-tests = []
integration-tests = []

#[dependencies.pnet]
#git = "https://github.com/faern/libpnet"
#branch = ""
#path = "../libpnet"

#[dependencies.ipnetwork]
#git = "https://github.com/faern/ipnetwork"
#path = "../ipnetwork"
