[package]
name = "rips"
version = "0.0.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/faern/librips"
description = "Rust TCP/IP Stack - A full userspace TCP/IP stack written in Rust"
readme = "README.md"

[dependencies]
ipnetwork = "0.9.0"
#pnet = "0.12.0"
log = "0.3"
rand = "0.3"

[dev-dependencies]
lazy_static = "^0.2"

[features]
default = []
unit-tests = [] # Activate this to build for unit testing
integration-tests = [] # Activate to build for integration testing
benchmarks = []

[dependencies.pnet]
git = "https://github.com/faern/libpnet"
branch = "working-stack"
#path = "../libpnet"

#[dependencies.ipnetwork]
#git = "https://github.com/faern/ipnetwork"
#path = "../ipnetwork"

#[profile.release]
#debug = true
#lto = false
