[package]
name = "rips"
version = "0.0.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/faern/rips"
repository = "https://github.com/faern/rips"
description = "Rust TCP/IP Stack - A full userspace TCP/IP stack written in Rust"
keywords = ["network", "stack", "ip", "ethernet", "socket"]
readme = "README.md"

[dependencies]
ipnetwork = "0.10.0"
#pnet = "0.12.0"
log = "0.3"
rand = "0.3"
lazy_static = "^0.2"

[dev-dependencies]


[features]
default = []
bench = []

[dependencies.pnet]
git = "https://github.com/faern/libpnet"
#branch = "self-owned-packets"
#path = "../libpnet"

#[dependencies.ipnetwork]
#git = "https://github.com/faern/ipnetwork"
#path = "../ipnetwork"

#[profile.release]
#debug = true
#lto = false
